    <https://github.com/clarin-eric/VLO/issues/77>
* Use long date format
    <https://github.com/clarin-eric/VLO/issues/284>
* Make web app locale static
    <https://github.com/clarin-eric/VLO/issues/282>
* Upgrade to RASA 2.8
    <https://github.com/clarin-eric/VLO/issues/299>
* Add busy indicator to "all values" panel interactions
    <https://github.com/clarin-eric/VLO/issues/300>

VLO 4.8.2 (March 2020)

* Using new link checker API
    <https://github.com/clarin-eric/VLO/issues/285>
* FCS integration can be disabled
    <https://github.com/clarin-eric/VLO/issues/286>
* Fixed bug caused by invalid selection received through query parameters of URL
    <https://github.com/clarin-eric/VLO/issues/294>

VLO 4.8.1 (February 2020)

* Upper bound for number of collections sent to statistics reporting
    <https://github.com/clarin-eric/VLO/issues/289>

VLO 4.8.0 (January 2020)

* Creator information is displayed for records that provide this information
    <https://github.com/clarin-eric/VLO/issues/152>
* Improve record page 'sidebar' icons, including option to invoke the switchboard
    <https://github.com/clarin-eric/VLO/issues/163>
    <https://github.com/clarin-eric/VLO/issues/269>
    <https://github.com/clarin-eric/VLO/issues/273>
* Improvement to links table for a record: do not duplicate non-resource links on
every page, and also include search page and service links
    <https://github.com/clarin-eric/VLO/issues/267>
    <https://github.com/clarin-eric/VLO/issues/268>
* Widget to copy the link to a page has been simplified
    <https://github.com/clarin-eric/VLO/issues/262>
* Changed text of landing page links in search results
    <https://github.com/clarin-eric/VLO/issues/246>
* Technical improvements to the guided tour, and made visually more distinct
    <https://github.com/clarin-eric/VLO/issues/216>
* Document identifier now by default as a URL path parameter for the record page
    <https://github.com/clarin-eric/VLO/issues/272>